k8s/apps/monitoring/checkmk-agent/envs/dev/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cmk-ingress
  namespace: checkmk-agent
spec:
  parentRefs:
    - name: internal
      namespace: gateway
  hostnames:
    - "dev-cmk-ingress.dev.iseja.net"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: checkmk-kube-agent-cluster-collector
          port: 8080
